objects/Purch_Rcpt_Line__c/Purch_Rcpt_Line__c.object-meta.xml
<CustomObject>
    <label>Purch. Rcpt. Line</label>
    <nameField>
        <displayFormat>PRL-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purch. Rcpt. Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>