objects/Purch_Rcpt_Line__c/fields/Cost_Type__c.field-meta.xml
<CustomField>
    <fullName>Cost_Type__c</fullName>
    <label>Cost Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AD-AP1</fullName>
                <label>AD-AP1 : ACCIDENT PURCHASES</label>
            </value>
            <value>
                <fullName>CP-AP1</fullName>
                <label>CP-AP1 : CAPITAL PURCHASES</label>
            </value>
            <value>
                <fullName>DN-AP1</fullName>
                <label>DN-AP1 : NEGLECT PURCHASES</label>
            </value>
            <value>
                <fullName>FU-EL1</fullName>
                <label>FU-EL1 : FUEL PURCHASES</label>
            </value>
            <value>
                <fullName>PM-AP1</fullName>
                <label>PM-AP1 : PM PURCHASES</label>
            </value>
            <value>
                <fullName>PT-001</fullName>
                <label>PT-001 : PARTS PURCHASE</label>
            </value>
            <value>
                <fullName>RG-000</fullName>
                <label>RG-000 : AP - REGISTRATION</label>
            </value>
            <value>
                <fullName>RP-AP1</fullName>
                <label>RP-AP1 : REPAIR PURCHASES</label>
            </value>
            <value>
                <fullName>TI-RES</fullName>
                <label>TI-RES : TIRE PURCHASES</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>