objects/Purch_Rcpt_Line__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <label>Discount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>