objects/Purch_Rcpt_Line__c/fields/G_L_Account__c.field-meta.xml
<CustomField>
    <fullName>G_L_Account__c</fullName>
    <label>G/L Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GLAccount</valueSetName>
    </valueSet>
</CustomField>