objects/Purch_Rcpt_Line__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item</label>
    <referenceTo>Purchase_Price__c</referenceTo>
    <relationshipLabel>Purch. Rcpt. Lines</relationshipLabel>
    <relationshipName>Purch_Rcpt_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>