objects/Purch_Rcpt_Line__c/fields/Line_Cost__c.field-meta.xml
<CustomField>
    <fullName>Line_Cost__c</fullName>
    <formula>(Unit_Cost__c * Quantity__c) - Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>