objects/Purch_Rcpt_Line__c/fields/Line_Type__c.field-meta.xml
<CustomField>
    <fullName>Line_Type__c</fullName>
    <formula>Purchase_Line__r.Line_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Type</label>
    <type>Text</type>
</CustomField>