objects/Purch_Rcpt_Line__c/fields/No__c.field-meta.xml
<CustomField>
    <fullName>No__c</fullName>
    <formula>Purchase_Line__r.No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No.</label>
    <type>Text</type>
</CustomField>