objects/Purch_Rcpt_Line__c/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <formula>IF(LEN(Description__c) &gt; 50, LEFT(Description__c, 50), Description__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Description</label>
    <type>Text</type>
</CustomField>