objects/Purch_Rcpt_Line__c/fields/Purchase_Line__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Line</label>
    <referenceTo>Purchase_Line__c</referenceTo>
    <relationshipLabel>Purch. Rcpt. Lines</relationshipLabel>
    <relationshipName>Purch_Rcpt_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>