objects/Purch_Rcpt_Line__c/fields/Purchase_Order_Line_No__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Line_No__c</fullName>
    <formula>Purchase_Line__r.Line_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Order Line No.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>