objects/Purch_Rcpt_Line__c/fields/Purchase_Order_No__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_No__c</fullName>
    <formula>Purchase_Line__r.Purchase_Order__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Order No.</label>
    <type>Text</type>
</CustomField>