objects/Purch_Rcpt_Line__c/fields/Receipt__c.field-meta.xml
<CustomField>
    <fullName>Receipt__c</fullName>
    <label>Receipt</label>
    <referenceTo>Purchase_Receipt__c</referenceTo>
    <relationshipLabel>Purch. Rcpt. Lines</relationshipLabel>
    <relationshipName>Purch_Rcpt_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>