objects/Purch_Rcpt_Line__c/fields/Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Date__c</fullName>
    <formula>Receipt__r.Actual_Receipt_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receipt Date</label>
    <type>Date</type>
</CustomField>