objects/Purch_Rcpt_Line__c/fields/Rental_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Rental_Frequency__c</fullName>
    <label>Rental Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>