objects/Purch_Rcpt_Line__c/fields/Service_Center__c.field-meta.xml
<CustomField>
    <fullName>Service_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Center</label>
    <referenceTo>Service_Center__c</referenceTo>
    <relationshipLabel>Purch. Rcpt. Lines</relationshipLabel>
    <relationshipName>Purch_Rcpt_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>