objects/Purch_Rcpt_Line__c/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit of Measure</label>
    <referenceTo>Unit_of_Measure__c</referenceTo>
    <relationshipLabel>Purch. Rcpt. Lines</relationshipLabel>
    <relationshipName>Purch_Rcpt_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>