objects/Purch_Rcpt_Line__c/fields/Unit_of_Measure_Code__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure_Code__c</fullName>
    <formula>Unit_of_Measure__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit of Measure Code</label>
    <type>Text</type>
</CustomField>