objects/Purch_Rcpt_Line__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>Vendor</label>
    <length>80</length>
    <type>Text</type>
</CustomField>