objects/Purch_Rcpt_Line__c/fields/Vendor_Description__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Description__c</fullName>
    <label>Vendor Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>